--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="_10">10</string>
     <string name="miss_left">Miss L</string>
     <string name="miss_right">Miss R</string>
+    <string name="x">X</string>
+    <string name="holej">Hole:</string>
+    <string name="x1">X</string>
+    <string name="parj">Par:</string>
+    <string name="x2">X</string>
 </resources>
